--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-infinite-scroller",
+  "name": "@meikidd/react-infinite-scroller",
   "version": "1.2.4",
   "description": "Infinite scroll component for React in ES6",
   "main": "index.js",
